package org.game.modelo;

public class Robot1X extends Robot {
    private static final String RUTA_IMG = "/Images/Robots1x/robot1x.gif";

    public Robot1X() {
        super(RUTA_IMG, 1);
    }
}
