package org.game.modelo;

public class Robot2X extends Robot {
    private static final String RUTA_IMG = "/Images/Robots2x/robot2x.gif";

    public Robot2X() {
        super(RUTA_IMG, 2);
    }
}
